syntax = "proto3";

package Jubo.JuLiao.IM.Wx.Proto;

import "TransportMessage.proto";

message WeChatRspMessage {
  string WeChatId = 1;
  string WeChatNo = 2;
  string WeChatNick = 3;
  string Avatar = 4;
  string Country = 5;
  string Province = 6;
  string City = 7;
  EnumGender Gender = 8;
  bool IsOnline = 9;
  bool IsLogined = 10;
  bool IsDelete = 11;
  int64 LoginTime = 12;
  int64 ModifyTime = 13;
  string DeviceName = 14;
  int64 LoginUnionId = 15;
  EnumAccountType LoginAccountType = 16;
  bool IsUpgrading = 17;
}

message GetWeChatsRspMessage {
  int64 UnionId = 1;
  EnumAccountType AccountType = 2;
  int64 SupplierId = 3;
  repeated WeChatRspMessage WeChats = 4;
}
